gr-sys/bindings/gks.rs

extern "C" {
    pub fn gks_inq_pline_linetype(errind: *mut ::core::ffi::c_int, ltype: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_pline_linewidth(errind: *mut ::core::ffi::c_int, lwidth: *mut f64);
}
extern "C" {
    pub fn gks_inq_pline_color_index(
        errind: *mut ::core::ffi::c_int,
        coli: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_inq_pmark_type(errind: *mut ::core::ffi::c_int, mtype: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_pmark_size(errind: *mut ::core::ffi::c_int, mszsc: *mut f64);
}
extern "C" {
    pub fn gks_inq_pmark_color_index(
        errind: *mut ::core::ffi::c_int,
        coli: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_inq_text_fontprec(
        errind: *mut ::core::ffi::c_int,
        font: *mut ::core::ffi::c_int,
        prec: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_inq_text_expfac(errind: *mut ::core::ffi::c_int, chxp: *mut f64);
}
extern "C" {
    pub fn gks_inq_text_spacing(errind: *mut ::core::ffi::c_int, chsp: *mut f64);
}
extern "C" {
    pub fn gks_inq_text_color_index(errind: *mut ::core::ffi::c_int, coli: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_text_height(errind: *mut ::core::ffi::c_int, chh: *mut f64);
}
extern "C" {
    pub fn gks_inq_text_upvec(errind: *mut ::core::ffi::c_int, chux: *mut f64, chuy: *mut f64);
}
extern "C" {
    pub fn gks_inq_text_path(errind: *mut ::core::ffi::c_int, txp: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_text_align(
        errind: *mut ::core::ffi::c_int,
        txalh: *mut ::core::ffi::c_int,
        txalv: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_inq_fill_int_style(errind: *mut ::core::ffi::c_int, ints: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_fill_style_index(
        errind: *mut ::core::ffi::c_int,
        styli: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_inq_fill_color_index(errind: *mut ::core::ffi::c_int, coli: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_transparency(errind: *mut ::core::ffi::c_int, alpha: *mut f64);
}
extern "C" {
    pub fn gks_inq_open_segn(errind: *mut ::core::ffi::c_int, segn: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_current_xformno(errind: *mut ::core::ffi::c_int, tnr: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_xform(
        tnr: ::core::ffi::c_int,
        errind: *mut ::core::ffi::c_int,
        wn: *mut f64,
        vp: *mut f64,
    );
}
extern "C" {
    pub fn gks_inq_clip(
        errind: *mut ::core::ffi::c_int,
        clsw: *mut ::core::ffi::c_int,
        clrt: *mut f64,
    );
}
extern "C" {
    pub fn gks_inq_ws_conntype(
        wkid: ::core::ffi::c_int,
        errind: *mut ::core::ffi::c_int,
        conid: *mut ::core::ffi::c_int,
        wtype: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_inq_ws_category(
        wkid: ::core::ffi::c_int,
        errind: *mut ::core::ffi::c_int,
        wscat: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_inq_text_extent(
        wkid: ::core::ffi::c_int,
        px: f64,
        py: f64,
        str_: *mut ::core::ffi::c_char,
        errind: *mut ::core::ffi::c_int,
        cpx: *mut f64,
        cpy: *mut f64,
        tx: *mut f64,
        ty: *mut f64,
    );
}
extern "C" {
    pub fn gks_inq_max_ds_size(
        wtype: ::core::ffi::c_int,
        errind: *mut ::core::ffi::c_int,
        dcunit: *mut ::core::ffi::c_int,
        rx: *mut f64,
        ry: *mut f64,
        lx: *mut ::core::ffi::c_int,
        ly: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_inq_vp_size(
        wkid: ::core::ffi::c_int,
        errind: *mut ::core::ffi::c_int,
        width: *mut ::core::ffi::c_int,
        height: *mut ::core::ffi::c_int,
        device_pixel_ratio: *mut f64,
    );
}
extern "C" {
    pub fn gks_sample_locator(
        wkid: ::core::ffi::c_int,
        errind: *mut ::core::ffi::c_int,
        x: *mut f64,
        y: *mut f64,
        buttons: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_emergency_close();
}
extern "C" {
    pub fn gks_set_text_slant(slant: f64);
}
extern "C" {
    pub fn gks_draw_image(
        x: f64,
        y: f64,
        scalex: f64,
        scaley: f64,
        width: ::core::ffi::c_int,
        height: ::core::ffi::c_int,
        data: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_set_shadow(offsetx: f64, offsety: f64, blur: f64);
}
extern "C" {
    pub fn gks_set_transparency(alpha: f64);
}
extern "C" {
    pub fn gks_set_coord_xform(mat: *mut [f64; 2usize]);
}
extern "C" {
    pub fn gks_begin_selection(index: ::core::ffi::c_int, kind: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_end_selection();
}
extern "C" {
    pub fn gks_move_selection(x: f64, y: f64);
}
extern "C" {
    pub fn gks_resize_selection(kind: ::core::ffi::c_int, x: f64, y: f64);
}
extern "C" {
    pub fn gks_set_bbox_callback(
        id: ::core::ffi::c_int,
        callback: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: ::core::ffi::c_int,
                arg2: f64,
                arg3: f64,
                arg4: f64,
                arg5: f64,
            ),
        >,
    );
}
extern "C" {
    pub fn gks_cancel_bbox_callback();
}
extern "C" {
    pub fn gks_set_background();
}
extern "C" {
    pub fn gks_clear_background();
}
extern "C" {
    pub fn gks_inq_bbox(
        errind: *mut ::core::ffi::c_int,
        xmin: *mut f64,
        xmax: *mut f64,
        ymin: *mut f64,
        ymax: *mut f64,
    );
}
extern "C" {
    pub fn gks_inq_text_slant(errind: *mut ::core::ffi::c_int, slant: *mut f64);
}
extern "C" {
    pub fn gks_precision() -> f64;
}
extern "C" {
    pub fn gks_text_maxsize() -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gks_set_border_color_index(coli: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_border_color_index(
        errind: *mut ::core::ffi::c_int,
        coli: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_set_border_width(bwidth: f64);
}
extern "C" {
    pub fn gks_inq_border_width(errind: *mut ::core::ffi::c_int, bwidth: *mut f64);
}
extern "C" {
    pub fn gks_select_clip_xform(tnr: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_clip_xform(errind: *mut ::core::ffi::c_int, tnr: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_resample_method(flag: ::core::ffi::c_uint);
}
extern "C" {
    pub fn gks_inq_resample_method(flag: *mut ::core::ffi::c_uint);
}
extern "C" {
    pub fn gks_ft_gdp(
        n: ::core::ffi::c_int,
        px: *mut f64,
        py: *mut f64,
        primid: ::core::ffi::c_int,
        ldr: ::core::ffi::c_int,
        datrec: *mut ::core::ffi::c_int,
    );
}
extern "C" {
    pub fn gks_state() -> *mut ::core::ffi::c_void;
}
extern "C" {
    pub fn gks_set_nominal_size(factor: f64);
}
extern "C" {
    pub fn gks_inq_nominal_size(factor: *mut f64);
}
extern "C" {
    pub fn gks_set_clip_region(region: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_clip_region(errind: *mut ::core::ffi::c_int, region: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_clip_sector(start_angle: f64, end_angle: f64);
}
extern "C" {
    pub fn gks_inq_clip_sector(
        errind: *mut ::core::ffi::c_int,
        start_angle: *mut f64,
        end_angle: *mut f64,
    );
}
extern "C" {
    pub fn gopengks(arg1: *mut Gfile, arg2: Glong) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gclosegks() -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gopenws(arg1: Gint, arg2: *mut Gconn, arg3: *mut Gwstype) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gclosews(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gactivatews(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gdeactivatews(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gconfigurews(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gclearws(arg1: Gint, arg2: Gclrflag) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gupdatews(arg1: Gint, arg2: Gregen) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gmessage(arg1: Gint, arg2: *mut Gchar) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gpolyline(arg1: Gint, arg2: *mut Gpoint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gpolymarker(arg1: Gint, arg2: *mut Gpoint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gtext(arg1: *mut Gpoint, arg2: *mut Gchar) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gfillarea(arg1: Gint, arg2: *mut Gpoint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gcellarray(arg1: *mut Grect, arg2: *mut Gidim, arg3: *mut Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetasf(arg1: *mut Gasfs) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetlineind(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetlinetype(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetlinewidth(arg1: Gfloat) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetlinecolourind(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetmarkerind(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetmarkertype(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetmarkersize(arg1: Gfloat) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetmarkercolourind(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsettextind(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsettextfontprec(arg1: *mut Gtxfp) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetcharexpan(arg1: Gfloat) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetcharspace(arg1: Gfloat) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsettextcolourind(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetcharheight(arg1: Gfloat) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetcharup(arg1: *mut Gpoint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsettextpath(arg1: Gtxpath) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsettextalign(arg1: *mut Gtxalign) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetfillind(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetfillintstyle(arg1: Gflinter) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetfillstyle(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetfillcolourind(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetcolourrep(arg1: Gint, arg2: Gint, arg3: *mut Gcobundl) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetwindow(arg1: Gint, arg2: *mut Glimit) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetviewport(arg1: Gint, arg2: *mut Glimit) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gselntran(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetclip(arg1: Gclip) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetwswindow(arg1: Gint, arg2: *mut Glimit) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetwsviewport(arg1: Gint, arg2: *mut Glimit) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn greqloc(arg1: Gint, arg2: Gint, arg3: *mut Gqloc) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn greqstring(arg1: Gint, arg2: Gint, arg3: *mut Gqstring) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gcreateseg(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gcopysegws(arg1: Gint, arg2: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gredrawsegws(arg1: Gint) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gcloseseg() -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gevaltran(
        arg1: *mut Gpoint,
        arg2: *mut Gpoint,
        arg3: Gfloat,
        arg4: *mut Gscale,
        arg5: Gcsw,
        arg6: *mut [Gfloat; 3usize],
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gsetsegtran(arg1: Gint, arg2: *mut [Gfloat; 3usize]) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn ginqopst(arg1: *mut Gint) -> ::core::ffi::c_int;
}
